tests/ui/async-await/async-closures/tainted-body-2.stderr
error[E0425]: cannot find value `missing` in this scope
  --> $DIR/tainted-body-2.rs:7:5
   |
LL |     missing;
   |     ^^^^^^^ not found in this scope

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0425`.
